# DarkIronEcs

./: Cargo.toml  README.md
example/: all_features_example.rs  benchmark.rs
examples/: all_features.rs  benchmark.rs  simple_query.rs
src/: main.rs
src/core/: archetype.rs  as_any_trait.rs  component.rs  coordinator.rs  coroutine.rs  entity.rs  entity_manager.rs  error.rs  event.rs  extension.rs  mod.rs  query.rs  resources.rs  system.rs  world.rs
src/prometheus_ecs/: archetype.rs  component.rs  coroutine.rs  entity.rs  entity_manager.rs  error.rs  event.rs  mod.rs  query.rs  resources.rs  system.rs  world.rs
