[package]
name = "dark_iron_ecs"
version = "0.5.0"
edition = "2021"
authors = ["Gabriel Bernardo"]
license = "MIT"
description = "A simple Entity Component System library for Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[example]]
name = "all_features"
path = "examples/all_features.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

