[package]
name = "dark_iron_ecs"
version = "0.7.0"
edition = "2021"
authors = ["Gabriel Bernardo"]
license = "MIT"
description = "A simple Entity Component System library for Rust"
repository = "https://github.com/GabrielBernardoDaSilva/DarkIronEcs"
keywords = ["ecs", "game-development", "data-oriented-design"]
categories = ["development-tools", "game-development", ]
readme = "README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[example]]
name = "all_features"
path = "examples/all_features.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "simple_query"
path = "examples/simple_query.rs"


